<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="90dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="70dp"
            android:layout_weight="0.05"
            android:text="Wirtschaftswissenschaft"
            android:textColor="#e6140000"
            android:textIsSelectable="false"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Qn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/Qn_1"
            android:textColor="#e6140000"
            android:textSize="20dp" />

        <View
            style="@style/Divider"
            android:layout_marginBottom="20dp" />

        <RadioGroup
            android:id="@+id/radioAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:checked="true"
                android:text="@string/radio_1"
                android:textColor="#e6140000"
                android:textSize="17dp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/radio_2"
                android:textColor="#e6140000"
                android:textSize="17dp" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/radio_3"
                android:textColor="#e6140000"
                android:textSize="17dp" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="@string/radio_4"
                android:textColor="#e6140000"
                android:textSize="17dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/nachname"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.59"
            android:background="@color/amber_700"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="Noch 35 Sekunden!"
            android:textSize="20dp" />


    </LinearLayout>

    <include layout="@layout/toolbar" />

</RelativeLayout>

