<?xml version="1.0" encoding="utf-8"?>

<com.demo.materialdesignnavdrawer.customViews.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation_drawer_rootLayout"
    style="@style/ScrimInsetsLayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/navigation_drawer_account_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_account_section_default_height"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            tools:layout_height="@dimen/navigation_drawer_account_section_default_height">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@color/black_alpha_50">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/navigation_drawer_user_account_picture_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/image_new_background"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/navigation_drawer_account_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
                android:paddingEnd="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingLeft="@dimen/nav_drawer_vertical_keyline_icon_left"
                android:paddingRight="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingStart="@dimen/nav_drawer_vertical_keyline_icon_left">

                <LinearLayout
                    android:id="@+id/navigation_drawer_account_information"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navigation_drawer_account_information_height"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_display_name"
                        style="@style/NavDrawerAccountInfoText"
                        android:text="@string/tools_text_account_information_username" />

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_email"
                        style="@style/NavDrawerAccountInfoText"
                        android:text="@string/tools_text_account_information_email" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/navigation_drawer_user_account_picture_profile"
                    android:layout_width="@dimen/navigation_drawer_profile_image_size"
                    android:layout_height="@dimen/navigation_drawer_profile_image_size"
                    android:layout_above="@id/navigation_drawer_account_information"
                    android:src="@drawable/ic_account_circle_white_64dp" />

            </RelativeLayout>

        </FrameLayout>

        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/navigation_drawer_background"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
            android:paddingTop="@dimen/nav_drawer_vertical_spacing_listing">

            <LinearLayout
                android:id="@+id/navigation_drawer_linearLayout_entries_root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_home"
                    style="@style/NavDrawerRowLayout.Main">

                    <com.demo.materialdesignnavdrawer.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_home"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_home_white_24dp"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_home"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_home"

                        tools:textColor="@color/nav_drawer_item_text_selected" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_profile"
                    style="@style/NavDrawerRowLayout.Main">

                    <com.demo.materialdesignnavdrawer.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_explore"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_action_profile_new"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_profile"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_profile" />

                </FrameLayout>

                <include layout="@layout/navigation_drawer_divider" />


                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_option"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <com.demo.materialdesignnavdrawer.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_about"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_action_option_amber"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_option"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_option" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_help_and_feedback"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <com.demo.materialdesignnavdrawer.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_help_and_feedback"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_action_help_amber"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_help_and_feedback"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_help_and_feedback" />

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_impressum"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <com.demo.materialdesignnavdrawer.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_impressum"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_action_impressum_amber"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_impressum"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_impressum" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_logout"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <com.demo.materialdesignnavdrawer.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_logout"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_action_name2"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_logout"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_logout" />

                </FrameLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</com.demo.materialdesignnavdrawer.customViews.ScrimInsetsFrameLayout>